revert back to original with whitespace issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body {
 }
 
 .content {
-    padding: 5px;
+    padding: 20px;
 }
 
 #container {
